<resources>
    <string name="app_name">4Runners</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_MenuPpal">Menú principal</string>
    <string name="tv_Jugar">Jugar</string>
    <string name="tv_Ajustes">Ajustes</string>
    <string name="tv_Instrucciones">Instrucciones</string>
    <string name="tv_Ranking">Ranking</string>
    <string name="tv_Usuario">Usuario</string>
    <string name="tv_Info">Info</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity__contenedor_instrucciones">Activity_Contenedor_instrucciones
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
</resources>
